objects/sortablegrid__SDG__c.object
<CustomObject>
    <fields>
        <fullName>sortablegrid__All_Rows__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Retrieve all rows - including archived and deleted records. Generally leave as false unless there&apos;s a specific need.</inlineHelpText>
        <label>All Rows</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sortablegrid__Debug__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Displays a log on the UI</inlineHelpText>
        <label>Deprecated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sortablegrid__Default_Sort__c</fullName>
        <inlineHelpText>Provides automatic sorting for the grid.  example: Name Asc</inlineHelpText>
        <label>Default Sort</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sortablegrid__DisableSharing__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Disable Sharing rules (ie run &apos;Without Sharing&apos;)</inlineHelpText>
        <label>Disable Sharing Rules</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sortablegrid__Enable_cache__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Cache data locally on the client to improve performance</inlineHelpText>
        <label>Deprecated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sortablegrid__Example_SOQL__c</fullName>
        <description>DEPRECATED</description>
        <inlineHelpText>DEPRECATED</inlineHelpText>
        <label>DEPRECATED</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sortablegrid__Filter__c</fullName>
        <inlineHelpText>Define SOQL filter here - no AND or WHERE necessary - this will always be applied</inlineHelpText>
        <label>Filter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sortablegrid__Is_Valid__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Whether to enable/disable the grid.</inlineHelpText>
        <label>Is Valid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sortablegrid__Parent_Field_Name__c</fullName>
        <inlineHelpText>Link to parent record if required.  To show Contacts for an Account - this value should be AccountId as that is the field on Contact that references the Account</inlineHelpText>
        <label>Parent Field Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sortablegrid__SDG_Tag__c</fullName>
        <inlineHelpText>Unique name for the grid</inlineHelpText>
        <label>SDG Tag</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>sortablegrid__sObjectName__c</fullName>
        <inlineHelpText>API Name of the core sObject to be rendering: eg Contact or CustomObject__c</inlineHelpText>
        <label>sObjectName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Sortable Data Grid</label>
    <listViews>
        <fullName>sortablegrid__All</fullName>
        <columns>NAME</columns>
        <columns>sortablegrid__sObjectName__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>SDG Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sortable Data Grids</pluralLabel>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>sortablegrid__Make_sObjectName_Mandatory</fullName>
        <active>true</active>
        <description>sObjectName is mandatory</description>
        <errorConditionFormula>ISBLANK( sortablegrid__sObjectName__c )</errorConditionFormula>
        <errorMessage>sObjectName is mandatory</errorMessage>
    </validationRules>
</CustomObject>